Fix spacing on menu and decrease menu font size

--- a/css/scss/components/_header.scss
+++ b/css/scss/components/_header.scss
@@ -62,6 +62,7 @@
 		nav {
 			grid-area: nav;
 			display: flex;
+			justify-content: space-between;
 			flex-wrap: nowrap;
 			flex-direction: row;
 			overflow-x: scroll;
@@ -72,6 +73,11 @@
 				font-weight: 300;
 				padding: 0 0.5rem;
 				border-right: 1px solid $black;
+				font-size: 0.765rem;
+
+				&:first-child {
+					padding: 0 0.5rem 0 0;
+				}
 
 				&:last-child {
 					padding: 0 0 0 0.5rem;
